metadatafullcopy/unpackaged/objects/Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact the Expense is related to.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current YTD Expense?</label>
        <type>Checkbox</type>
    </fields>
    <label>Expense (old)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>